force-app/main/default/objects/Grant_Solicitation__c/fields/Primary_Supporting_Technology_Default__c.field-meta.xml
<CustomField>
    <fullName>Primary_Supporting_Technology_Default__c</fullName>
    <label>Primary Supporting Technology - Default</label>
    <length>255</length>
    <type>Text</type>
</CustomField>