force-app/main/default/objects/Grant_Solicitation__c/fields/Procurement_Contract__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Contract__c</fullName>
    <label>Procurement Contract</label>
    <length>10</length>
    <type>Text</type>
</CustomField>