force-app/main/default/objects/Grant_Solicitation__c/fields/Procurement_Method__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Method__c</fullName>
    <label>Procurement Method</label>
    <length>20</length>
    <type>Text</type>
</CustomField>