force-app/main/default/objects/Grant_Solicitation__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>The program managing this solicitation.</description>
    <inlineHelpText>The program managing this solicitation.</inlineHelpText>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Solicitation</relationshipLabel>
    <relationshipName>Program_Versions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>