force-app/main/default/objects/Grant_Solicitation__c/fields/Program_Budget__c.field-meta.xml
<CustomField>
    <fullName>Program_Budget__c</fullName>
    <label>Program Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>