force-app/main/default/objects/Grant_Solicitation__c/fields/Program_Manager__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solicitation2</relationshipName>
    <type>Lookup</type>
</CustomField>