force-app/main/default/objects/Grant_Solicitation__c/fields/Program_Rules__c.field-meta.xml
<CustomField>
    <fullName>Program_Rules__c</fullName>
    <label>Program Rules</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>