force-app/main/default/objects/Grant_Solicitation__c/fields/Project_Capabilities_Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Project_Capabilities_Survey_ID__c</fullName>
    <label>Project Capabilities Survey ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>