force-app/main/default/objects/Grant_Solicitation__c/fields/Project_Name_Street__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Street__c</fullName>
    <label>Project Name - Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>