force-app/main/default/objects/Grant_Solicitation__c/fields/Project_Name_Technology__c.field-meta.xml
<CustomField>
    <fullName>Project_Name_Technology__c</fullName>
    <label>Project Name - Technology</label>
    <length>255</length>
    <type>Text</type>
</CustomField>