force-app/main/default/objects/Grant_Solicitation__c/fields/Project_Primary_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Primary_Name__c</fullName>
    <label>Project Primary Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Primary Customer</fullName>
            </value>
            <value>
                <fullName>Site Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>