force-app/main/default/objects/Grant_Solicitation__c/fields/Project_Record_Type_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Record_Type_Template__c</fullName>
    <label>Project Record Type Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>