force-app/main/default/objects/Grant_Solicitation__c/fields/ProjectInvoice_FieldSet_API_Name_for_CSV__c.field-meta.xml
<CustomField>
    <fullName>ProjectInvoice_FieldSet_API_Name_for_CSV__c</fullName>
    <description>ProjectInvoice FieldSet API Name for CSV</description>
    <label>ProjectInvoice FieldSet API Name for CSV</label>
    <length>80</length>
    <type>Text</type>
</CustomField>