force-app/main/default/objects/Grant_Solicitation__c/fields/ProjectInvoice_FieldSet_API_Name_Set_2__c.field-meta.xml
<CustomField>
    <fullName>ProjectInvoice_FieldSet_API_Name_Set_2__c</fullName>
    <description>ProjectInvoice FieldSet API Name for CSV</description>
    <label>ProjectInvoice FieldSet API Name (Set 2)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>