force-app/main/default/objects/Grant_Solicitation__c/fields/Proposal_Application_Program_Templates__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Application_Program_Templates__c</fullName>
    <description>Count of Proposal Application type of program templates. To be used in solicitation validations.</description>
    <formula>Program__r.Program_Templates_Proposal_Application__c &gt; 0</formula>
    <label>Proposal Application Program Templates?</label>
    <type>Checkbox</type>
</CustomField>