force-app/main/default/objects/Grant_Solicitation__c/fields/Proposal_Category__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Category__c</fullName>
    <description>T-02462: Rollup all validations onto Solicitation level</description>
    <formula>Total_Proposed_Category__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Category?</label>
    <type>Checkbox</type>
</CustomField>