force-app/main/default/objects/Grant_Solicitation__c/fields/Proposal_Scoring_Committee_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Scoring_Committee_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>S-00724</description>
    <label>Proposal Scoring Committee Reminder</label>
    <type>Checkbox</type>
</CustomField>