force-app/main/default/objects/Grant_Solicitation__c/fields/Proposal_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Threshold__c</fullName>
    <description>Minimum average score required for a Proposal according to the scoring rubric.</description>
    <inlineHelpText>Minimum average score required for a Proposal according to the scoring rubric.</inlineHelpText>
    <label>Proposal Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>