force-app/main/default/objects/Grant_Solicitation__c/fields/Proposal_Upload_Document__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Upload_Document__c</fullName>
    <description>T-02462/T-02793: Rollup all validations onto Solicitation level</description>
    <formula>Total_Documents_for_Submission_Proposal__c &gt; 0</formula>
    <label>Proposal Upload Document?</label>
    <type>Checkbox</type>
</CustomField>