force-app/main/default/objects/Grant_Solicitation__c/fields/Proposed_Cost_Share_Required__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Cost_Share_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>By checking this box, Non-NYSERDA Cost Share amount will be a required field during the proposal submission process</description>
    <inlineHelpText>By checking this box, non-NYSERDA Cost Share amount will be a required field during the proposal submission process</inlineHelpText>
    <label>Proposed Cost Share Required?</label>
    <type>Checkbox</type>
</CustomField>