force-app/main/default/objects/Grant_Solicitation__c/fields/Record_Type_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Record_Type_API_Name__c</fullName>
    <description>Set this to the record type that projects under this solicitation have. If the project created has this record type and has the generate funding sources selected, then the proper funding source will automatically be created.</description>
    <inlineHelpText>For Direct to Voucher: Set this to the record type that projects under this solicitation have. If the project created has this record type and has the generate funding sources selected, then the proper funding source will automatically be created.</inlineHelpText>
    <label>Record Type API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>