force-app/main/default/objects/Grant_Solicitation__c/fields/Regions__c.field-meta.xml
<CustomField>
    <fullName>Regions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Regions</label>
    <type>Checkbox</type>
</CustomField>