force-app/main/default/objects/Grant_Solicitation__c/fields/Required_Roles_on_Contractor_Application__c.field-meta.xml
<CustomField>
    <fullName>Required_Roles_on_Contractor_Application__c</fullName>
    <description>Required_Roles_on_Contractor_Application</description>
    <label>Required Roles on Contractor Application</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Contact</fullName>
            </value>
            <value>
                <fullName>Account Receivable Contact</fullName>
            </value>
            <value>
                <fullName>Authorized Signatory Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>