force-app/main/default/objects/Grant_Solicitation__c/fields/Required_Site_on_Concept_Paper__c.field-meta.xml
<CustomField>
    <fullName>Required_Site_on_Concept_Paper__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Require proposers to input site information as part of the concept paper submission process. This adds an additional step to the submission wizard.</inlineHelpText>
    <label>Required Site on Concept Paper?</label>
    <type>Checkbox</type>
</CustomField>