force-app/main/default/objects/Grant_Solicitation__c/fields/Required_Site_on_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Required_Site_on_Proposal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Require proposers to input site information as part of the proposal submission process. This adds an additional step to the submission wizard.</inlineHelpText>
    <label>Required Site on Proposal?</label>
    <type>Checkbox</type>
</CustomField>