force-app/main/default/objects/Grant_Solicitation__c/fields/Requisition_Id__c.field-meta.xml
<CustomField>
    <fullName>Requisition_Id__c</fullName>
    <description>This field goes into the Project Contract Line</description>
    <label>Requisition Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>