force-app/main/default/objects/Grant_Solicitation__c/fields/Revised_Date__c.field-meta.xml
<CustomField>
    <fullName>Revised_Date__c</fullName>
    <inlineHelpText>The date in which the most recent Change Modification Request was approved.</inlineHelpText>
    <label>Revised Date</label>
    <type>DateTime</type>
</CustomField>