force-app/main/default/objects/Grant_Solicitation__c/fields/Revised_Notes__c.field-meta.xml
<CustomField>
    <fullName>Revised_Notes__c</fullName>
    <label>Revised Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>