force-app/main/default/objects/Grant_Solicitation__c/fields/Round_Number__c.field-meta.xml
<CustomField>
    <fullName>Round_Number__c</fullName>
    <label>Round Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>