force-app/main/default/objects/Grant_Solicitation__c/fields/Score_Type__c.field-meta.xml
<CustomField>
    <fullName>Score_Type__c</fullName>
    <inlineHelpText>Sum of Rank: All Review Team Members are required to score the proposal. 

Batch Rank: Solicitation Manager will categorize Review Team Members into groups. After doing so, groups are assigned to proposals for scoring.</inlineHelpText>
    <label>Score Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sum of Rank</fullName>
            </value>
            <value>
                <fullName>Batch Rank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>