force-app/main/default/objects/Grant_Solicitation__c/fields/Scoring_Rubric__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Rubric__c</fullName>
    <description>Scoring rubric file url.</description>
    <formula>IF(NOT(ISBLANK(Scoring_Rubric_Attachment_Id__c )),

$Label.CORE_NYSERDA_Site_URL &amp; &apos;servlet/servlet.FileDownload?file=&apos; &amp; Scoring_Rubric_Attachment_Id__c 
,

&apos;&apos;

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scoring Rubric</label>
    <type>Text</type>
</CustomField>