force-app/main/default/objects/Grant_Solicitation__c/fields/Scoring_Rubric_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Rubric_Attachment_Id__c</fullName>
    <description>Hidden field to track the attachment id of Scoring Rubric file. This is used on notifications, and populated via attachment trigger.</description>
    <externalId>true</externalId>
    <label>Scoring Rubric Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>