force-app/main/default/objects/Grant_Solicitation__c/fields/Scoring_Rubric_Concept_Paper_Attch_Id__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Rubric_Concept_Paper_Attch_Id__c</fullName>
    <description>Hidden field to track the attachment id of Scoring Rubric file specific to Concept Paper. Tech To Market Release 2 - WF - 5</description>
    <externalId>true</externalId>
    <label>Scoring Rubric Concept Paper Attch Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>