force-app/main/default/objects/Grant_Solicitation__c/fields/Service_Disabled_Veteran_Owned_Business__c.field-meta.xml
<CustomField>
    <fullName>Service_Disabled_Veteran_Owned_Business__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if Service-Disabled Veteran-Owned Business (SDVOB)</description>
    <inlineHelpText>Check this box if this solicitation has Service-Disabled Veteran-Owned Business (SDVOB) goals. If so, also go to the appropriate checklist question in the Program Contents and set the question to active.</inlineHelpText>
    <label>Service-Disabled Vet-Owned Bus. Goals?</label>
    <type>Checkbox</type>
</CustomField>