force-app/main/default/objects/Grant_Solicitation__c/fields/Service_Provider_Survey_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Survey_ID__c</fullName>
    <label>Service Provider Survey ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>