force-app/main/default/objects/Grant_Solicitation__c/fields/Service_Year_1_Cap__c.field-meta.xml
<CustomField>
    <fullName>Service_Year_1_Cap__c</fullName>
    <label>Service Year 1 - Cap</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>