force-app/main/default/objects/Grant_Solicitation__c/fields/Service_Year_1_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Service_Year_1_Incentive__c</fullName>
    <label>Service Year 1 - Incentive</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>