force-app/main/default/objects/Grant_Solicitation__c/fields/Service_Year_2_Incentive_B__c.field-meta.xml
<CustomField>
    <fullName>Service_Year_2_Incentive_B__c</fullName>
    <label>Service Year 2 - Incentive (B)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>