force-app/main/default/objects/Grant_Solicitation__c/fields/Service_Year_3_Incentive__c.field-meta.xml
<CustomField>
    <fullName>Service_Year_3_Incentive__c</fullName>
    <label>Service Year 3 - Incentive</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>