force-app/main/default/objects/Grant_Solicitation__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>S-00687 - To be finalized.</description>
    <inlineHelpText>Description of this solicitation. This field will be displayed on the Current Funding Opportunities page.</inlineHelpText>
    <label>Short Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>