force-app/main/default/objects/Grant_Solicitation__c/fields/Size_of_Project_s__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Project_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Size of Project(s)</label>
    <type>Checkbox</type>
</CustomField>