force-app/main/default/objects/Grant_Solicitation__c/fields/Skip_Invoice_Funding_Split__c.field-meta.xml
<CustomField>
    <fullName>Skip_Invoice_Funding_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Invoice Funding Split</label>
    <type>Checkbox</type>
</CustomField>