force-app/main/default/objects/Grant_Solicitation__c/fields/SkipProjectNamingConvention__c.field-meta.xml
<CustomField>
    <fullName>SkipProjectNamingConvention__c</fullName>
    <defaultValue>false</defaultValue>
    <description>T-01171
Clean Transportation: Refactor project naming convention</description>
    <inlineHelpText>If checked then child Project(&quot;Clean Transportation&quot;) name will not be overwritten</inlineHelpText>
    <label>Skip Project Naming Convention</label>
    <type>Checkbox</type>
</CustomField>