force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Announcement_Date__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Announcement_Date__c</fullName>
    <inlineHelpText>The date the solicitation was announced.  Once this date has passed, the Solicitation is locked and cannot be edited without a Change Modification Request.</inlineHelpText>
    <label>Solicitation Announcement Date</label>
    <type>Date</type>
</CustomField>