force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Beta_Review__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Beta_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this box makes the solicitation eligible for viewing on NYSERDA&apos;s beta Current Funding Opportunities page.</description>
    <inlineHelpText>Checking this box makes the solicitation eligible for viewing on NYSERDA&apos;s beta Current Funding Opportunities page.</inlineHelpText>
    <label>Solicitation Beta Review</label>
    <type>Checkbox</type>
</CustomField>