force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Category__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Category__c</fullName>
    <inlineHelpText>RFP, RFQL, RFQ, RFI, or PON

This field is used to classify the solicitation on the Current Funding Opportunities website.</inlineHelpText>
    <label>Solicitation Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>RFQL</fullName>
            </value>
            <value>
                <fullName>RFQ</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>PON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>