force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Detail_Webpage_URL__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Detail_Webpage_URL__c</fullName>
    <description>Field to prepare the URL for NYSERDA webpage. This is being used on notifications.</description>
    <formula>IF(
  NY_Green_Bank_RFP__c,
  $Label.CORE_Branded_NY_Green_Bank_Portal_URL,
  $Label.CORE_Branded_NYSERDA_Portal_URL 
)
&amp; &apos;CORE_Solicitation_Detail_Page?SolicitationId=&apos; &amp;  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitation Detail Webpage URL</label>
    <type>Text</type>
</CustomField>