force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Funding_Source__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Funding_Source__c</fullName>
    <description>Count Solicitation Funding Sources on solicitation for validations. Rollup all validations onto Solicitation level.</description>
    <formula>Solicitation_Funding_Source_Count__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitation Funding Source?</label>
    <type>Checkbox</type>
</CustomField>