force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Funding_Source_Count__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Funding_Source_Count__c</fullName>
    <description>Count Solicitation Funding Sources on solicitation for validations. Rollup all validations onto Solicitation level.</description>
    <label>Solicitation Funding Source Count</label>
    <summaryFilterItems>
        <field>Funding_Source__c.Amount__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>Funding_Source__c.Solicitation__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>