force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Manager__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitation Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Solicitation1</relationshipName>
    <type>Lookup</type>
</CustomField>