force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Manager_Email__c</fullName>
    <formula>Solicitation_Manager__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitation Manager Email</label>
    <type>Text</type>
</CustomField>