force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Manager_Name__c</fullName>
    <formula>Solicitation_Manager__r.FirstName +&apos; &apos;+ Solicitation_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solicitation Manager Name</label>
    <type>Text</type>
</CustomField>