force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Number__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Number__c</fullName>
    <inlineHelpText>Both &apos;Solicitation Name&apos; and &apos;Solicitation Number&apos; will be used in NEIS and displayed on the Current Funding Opportunities website.</inlineHelpText>
    <label>Solicitation Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>