force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Round_for_Notification__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Round_for_Notification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Notification specific field - this will be updated and cleared via triggers for notification purpose.</description>
    <label>Solicitation Round for Notification</label>
    <referenceTo>Grant_Solicitation_Rounds__c</referenceTo>
    <relationshipLabel>Solicitation</relationshipLabel>
    <relationshipName>SolicitationRoundNotification</relationshipName>
    <type>Lookup</type>
</CustomField>