force-app/main/default/objects/Grant_Solicitation__c/fields/Solicitation_Type__c.field-meta.xml
<CustomField>
    <fullName>Solicitation_Type__c</fullName>
    <inlineHelpText>Due Date / Multi-Round or Rolling Solicitation. Due Date solicitations can be edited up until the due date/time, but rolling solicitations can&apos;t be edited after submit. Rolling Solicitations flip the status to Pending Review upon Submit.</inlineHelpText>
    <label>Solicitation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Due Date / Multi Round</fullName>
            </value>
            <value>
                <fullName>Rolling Solicitation</fullName>
            </value>
            <value>
                <fullName>Open Enrollment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>