force-app/main/default/objects/Grant_Solicitation__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The start of the proposal submission period.</description>
    <inlineHelpText>The start of the proposal submission period.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>