force-app/main/default/objects/Grant_Solicitation__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Draft, Open, or Closed. 

Draft: Solicitation creation and configuration stage. Nothing is exposed to the public. 
Open: Solicitation is open to the public and visible on the Current Funding Opportunities website.
Closed: Solicitation is closed and nDraft, Open, or Closed. 
Draft: Solicitation creation and configuration stage. Nothing is exposed to the public. 
Open: Solicitation is open to the public and visible on the website.
Closed: Solicitation is closed and not visible on the website.ot visible on the Current Funding Opportunities website.Solicitations Status is set to &quot;Closed&quot; automatically exactly at 5 pm on the day of the latest round due date. 
 A change mod is needed to set it back to open.

Canceled status SF-30800</description>
    <inlineHelpText>Draft: Creation and config stage. Nothing is shown to the public. 
Open: Open to the public and visible on website.
Closed: Closed and not visible on the website.Closed automatically at 3pm on the day of the latest round due date. Change mod to re-open</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>