force-app/main/default/objects/Grant_Solicitation__c/fields/Sub_Solicitation_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Solicitation_Type__c</fullName>
    <label>Sub Solicitation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>