force-app/main/default/objects/Grant_Solicitation__c/fields/Subcontractor_Label__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor_Label__c</fullName>
    <label>Subcontractor Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>