force-app/main/default/objects/Grant_Solicitation__c/fields/Submission_Guideline__c.field-meta.xml
<CustomField>
    <fullName>Submission_Guideline__c</fullName>
    <label>Submission Guideline</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>