force-app/main/default/objects/Grant_Solicitation__c/fields/Submission_Message__c.field-meta.xml
<CustomField>
    <fullName>Submission_Message__c</fullName>
    <label>Submission Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>