force-app/main/default/objects/Grant_Solicitation__c/fields/Submission_Outside_Salesforce__c.field-meta.xml
<CustomField>
    <fullName>Submission_Outside_Salesforce__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked, you must populate the &apos;External Link&apos; field</description>
    <inlineHelpText>If this field is checked, you must populate the &apos;External Link&apos; field</inlineHelpText>
    <label>Submission Outside Salesforce</label>
    <type>Checkbox</type>
</CustomField>